@@ -1,3 +1,11 @@
+2012-11-26  Reinhard Max  <max@suse.de>
+
+	* unix/tclUnixSock.c: Factor out creation of the -sockname and
+	-peername lists from TcpGetOptionProc() to TcpHostPortList().
+	Make it robust against implementations of getnameinfo() that error
+	out if reverse mapping fails instead of falling back to the
+	numeric representation.
+	
 2012-11-20  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclBinary.c (BinaryDecode64): [Bug 3033307]: Corrected
